force-app/main/default/objects/Validation_Criteria__mdt/Validation_Criteria__mdt.object-meta.xml
<CustomObject>
    <description>This will hold the specific criteria that needs to be applied for the validation to flag</description>
    <label>Validation Criteria</label>
    <pluralLabel>Validation Criterion</pluralLabel>
</CustomObject>