force-app/main/default/objects/Validation_Criteria__mdt/fields/Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value__c</fullName>
    <description>This will be the filter value used in the criteria, this should be in string format that is parsable by Apex (eg date formats as YYYY-MM-DD)</description>
    <label>Filter Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>