force-app/main/default/objects/Validation_Criteria__mdt/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>The index that this rule should be evaluated at</description>
    <label>Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>