force-app/main/default/objects/Validation_Criteria__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Which operator to apply to the condition before running it</description>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal</fullName>
                <default>true</default>
                <label>Equal</label>
            </value>
            <value>
                <fullName>Not Equal</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does Not Contain</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
            <value>
                <fullName>Ends With</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Less Or Equal</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Greater Or Equal</fullName>
            </value>
            <value>
                <fullName>Includes</fullName>
            </value>
            <value>
                <fullName>Excludes</fullName>
            </value>
            <value>
                <fullName>Within</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>