force-app/main/default/objects/Validation_Criteria__mdt/fields/Validated_Field__c.field-meta.xml
<CustomField>
    <fullName>Validated_Field__c</fullName>
    <description>The field that should be eveluated against the criteria</description>
    <label>Validated Field</label>
    <metadataRelationshipControllingField>Validation_Criteria__mdt.Validated_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Validation_Criterion</relationshipLabel>
    <relationshipName>Validation_Criterion</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>