force-app/main/default/objects/Validation_Criteria__mdt/fields/Validated_Object__c.field-meta.xml
<CustomField>
    <fullName>Validated_Object__c</fullName>
    <description>The that should be validated against</description>
    <label>Validated Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Validation_Criterion</relationshipLabel>
    <relationshipName>Validation_Criterion</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>