force-app/main/default/objects/Validation_Criteria__mdt/fields/Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule__c</fullName>
    <description>Parent validation that should be applief for this validation rule</description>
    <label>Validation Rule</label>
    <referenceTo>Validation_Rule__mdt</referenceTo>
    <relationshipLabel>Validation Criterion</relationshipLabel>
    <relationshipName>Validation_Criterion</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>